test/Fail/Issue5810.err
Issue5810.agda:8.15-24: error: [InvalidTypeSort]
funSort Set LevelUniv is not a valid sort
when checking that the expression ⊤ → Level is a type
